{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 23,
  "lineage": "895790ad-9609-3e54-d8a2-8675bc0fd7bd",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_iep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0df25e949178ce6bc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-170-9-36.compute-1.amazonaws.com",
            "public_ip": "35.170.9.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-demo-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511821351562:internet-gateway/igw-027047c30b643ea80",
            "id": "igw-027047c30b643ea80",
            "owner_id": "511821351562",
            "tags": {
              "Name": "k8s-demo-internet-gateway"
            },
            "vpc_id": "vpc-033843b3decf2b019"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df25e949178ce6bc",
            "id": "nat-05d1fc4a03cea4193",
            "network_interface_id": "eni-09bf3c814b7502929",
            "private_ip": "10.0.4.177",
            "public_ip": "35.170.9.36",
            "subnet_id": "subnet-0a062599e9918e8a4",
            "tags": {
              "Name": "k8s-demo-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.vpc_iep",
            "module.network.aws_subnet.public_subnet_1a"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01eeda350cdf174e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05d1fc4a03cea4193",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01eeda350cdf174e7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.vpc_iep",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.public_subnet_1a"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-027047c30b643ea80",
            "id": "r-rtb-07a47272945b64da81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a47272945b64da8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07a47272945b64da8",
            "owner_id": "511821351562",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027047c30b643ea80",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-demo-public-route"
            },
            "vpc_id": "vpc-033843b3decf2b019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01eeda350cdf174e7",
            "owner_id": "511821351562",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-demo-private-route"
            },
            "vpc_id": "vpc-033843b3decf2b019"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030fdb0a9ff63fed2",
            "route_table_id": "rtb-07a47272945b64da8",
            "subnet_id": "subnet-0a062599e9918e8a4"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511821351562:subnet/subnet-0800630f48e5e7629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0800630f48e5e7629",
            "map_public_ip_on_launch": false,
            "owner_id": "511821351562",
            "tags": {
              "Name": "k8s-demo-private-1a"
            },
            "vpc_id": "vpc-033843b3decf2b019"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511821351562:subnet/subnet-05aa81c7277c9a6ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-05aa81c7277c9a6ca",
            "map_public_ip_on_launch": false,
            "owner_id": "511821351562",
            "tags": {
              "Name": "k8s-demo-private-1c"
            },
            "vpc_id": "vpc-033843b3decf2b019"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511821351562:subnet/subnet-0a062599e9918e8a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-0a062599e9918e8a4",
            "map_public_ip_on_launch": true,
            "owner_id": "511821351562",
            "tags": {
              "Name": "k8s-demo-public-1a"
            },
            "vpc_id": "vpc-033843b3decf2b019"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511821351562:subnet/subnet-0c9ce9e851d69c6f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0c9ce9e851d69c6f7",
            "map_public_ip_on_launch": true,
            "owner_id": "511821351562",
            "tags": {
              "Name": "k8s-demo-public-1c"
            },
            "vpc_id": "vpc-033843b3decf2b019"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511821351562:vpc/vpc-033843b3decf2b019",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b4d02751c1082d9",
            "default_route_table_id": "rtb-0e3c6827c5b7b13d2",
            "default_security_group_id": "sg-05b297a6cdbd0455c",
            "dhcp_options_id": "dopt-094f3173",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-033843b3decf2b019",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e3c6827c5b7b13d2",
            "owner_id": "511821351562",
            "tags": {
              "Name": "k8s-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}